@@ -121,6 +121,9 @@ Zope Changes
 
     Bugs fixed
 
+     - Collector #1293: Added default ports for http-server, ftp-server
+       and webdav-server.
+
      - Collector #1345: AcceleratedHTTPCacheManager now sends the
        Last-Modified header.
 
